# messaging_app

./: .gitignore  Cargo.toml  DOCUMENTATION.md  README.md  docker-compose.yml
.cargo/: config.toml
backend/: .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  prometheus.yml
backend/.github/workflows/: ci.yml
backend/docs/: PRODUCTION.md
backend/grafana/dashboards/: messaging_app.json
backend/grafana/provisioning/alerting/: additional_alerts.yaml
backend/grafana/provisioning/notifiers/: notifiers.yaml
backend/migrations/: 001_initial.sql  002_message_reactions.sql  002_status_updates.sql  003_media.sql  004_message_actions.sql  005_message_reactions.sql  20240101000000_initial.sql  20240320000000_create_groups.sql  20240320000001_update_messages.sql  20240320000002_update_users.sql  20240320000003_update_contacts.sql  20240320000005_update_message_reactions.sql  20240320000006_update_media.sql  20240320000007_update_message_reads.sql
backend/rust/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  setup.sh
backend/rust/migrations/: 20240314000000_initial_schema.sql
backend/rust/src/: main.rs  models.rs  routes.rs  websocket.rs
backend/rust/src/config/: app.rs  database.rs  mod.rs
backend/rust/src/models/: chat.rs  message.rs  mod.rs  user.rs
backend/rust/src/routes/: auth.rs  messages.rs  mod.rs  websocket.rs
backend/rust/src/services/: auth.rs  db.rs  email.rs  mod.rs  rate_limiter.rs
backend/rust/src/utils/: error.rs  validation.rs
backend/scripts/: backup.sh  deploy.sh  migrate.sh  run_load_test.sh  security_scan.sh  setup_alerts.sh  setup_cloud_storage.sh  setup_cron.sh  setup_db.sh  setup_monitoring.sh  setup_production.sh  setup_security.sh  setup_ssl.sh  test_restore.sh  update_dependencies.sh
backend/src/: api_docs.rs  auth.rs  config.rs  database.rs  error.rs  error_tracking.rs  lib.rs  main.rs  metrics.rs  models.rs  services.rs  websocket.rs
backend/src/handlers/: auth.rs  chat.rs  chats.rs  group_chat.rs  groups.rs  health.rs  media.rs  message_actions.rs  message_reactions.rs  messages.rs  mod.rs  users.rs  ws.rs
backend/src/middleware/: auth.rs  circuit_breaker.rs  mod.rs  rate_limit.rs  security.rs
backend/src/models/: group.rs  message.rs  mod.rs  user.rs
backend/src/services/: jwt.rs  mod.rs  redis.rs  ws.rs
backend/src/websocket/: handler.rs  mod.rs  rate_limit.rs  validation.rs
backend/tests/: integration_test.rs  load_test.js
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  MONITORING.md  OPERATIONS.md  README.md  TROUBLESHOOTING.md  USER_GUIDE.md
frontend/: jest.config.js  jest.setup.js  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/chat/: ChatArea.tsx  ChatHeader.tsx  ChatList.tsx  MessageInput.tsx  MessageList.tsx  Sidebar.tsx  UserProfile.tsx
frontend/hooks/: useWebSocket.ts
frontend/public/: index.html
frontend/src/: setupTests.ts  types.ts
frontend/src/components/: Chat.tsx  ChatApp.tsx  ChatList.tsx  ChatWindow.tsx  ForwardMessage.tsx  GroupChat.tsx  GroupInfo.tsx  GroupMembers.tsx  MediaUpload.tsx  Message.tsx  MessageInput.tsx  MessageReactions.tsx  MessageSearch.tsx  UserList.tsx
frontend/stores/: authStore.ts  chatStore.ts
java-backend/: pom.xml
rust-backend/: Dockerfile
src/: config.rs  main.rs
src/auth/: auth_service.rs  jwt.rs  mod.rs  password_hashing.rs
src/database/: db_clients.rs  mod.rs  models.rs  operation.rs
src/notifications/: apns.rs  fcm.rs
src/routes/: auth_routes.rs  message_routes.rs  mod.rs  user_routes.rs
src/security/: encryption.rs  mod.rs  secure_transmission.rs
src/websocket/: client.rs  server.rs
(+72 files in other folders)
