[package]
name = "messaging_app"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"

# Redis for pub/sub
redis = { version = "0.23", features = ["tokio-comp"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
futures = "0.3"
thiserror = "1.0"
futures-util = "0.3"
cloudinary = "0.8.1"
tracing-appender = "0.2"
anyhow = "1.0"
bytes = "1.0"
multipart = "0.18"
mime = "0.3"

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# Error tracking
sentry = "0.32.0"

# API documentation
utoipa = { version = "4.1.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "5.0.0", features = ["axum"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
test-case = "3.0"
wiremock = "0.5"
