[package]
name = "messaging-app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
actix-rt = "2.9"
actix-web-actors = "4.2"
actix = "0.13"
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.16", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.1"
bcrypt = "0.15"
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3" 